Updated all other files to reference index.html

--- a/illustration.html
+++ b/illustration.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="sidenav">
-        <a href="./home.html" id="name"><strong>Deya Liao</strong></a>
+        <a href="./index.html" id="name"><strong>Deya Liao</strong></a>
         <a href="./photo.html">Photo</a>
         <a href="./video.html">Video</a>
         <a href="#">Illustration</a>
