--- a/photo-subpages/kirkland.html
+++ b/photo-subpages/kirkland.html
@@ -6,7 +6,7 @@
 
 <body>
     <div class="sidenav">
-        <a href="../home.html" id="name"><strong>Deya Liao</strong></a>
+        <a href="../index.html" id="name"><strong>Deya Liao</strong></a>
         <a href="../photo.html">Photo</a>
         <a href="#">Video</a>
         <a href="#">Illustration</a>
