--- a/video.html
+++ b/video.html
@@ -7,7 +7,7 @@
 
 <!-- Side navigation -->
 <div class="sidenav">
-    <a href="./home.html" id="name"><strong>Deya Liao</strong></a>
+    <a href="./index.html" id="name"><strong>Deya Liao</strong></a>
     <a href="./photo.html">Photo</a>
     <a href="#">Video</a>
     <a href="./illustration.html">Illustration</a>
