Fixed bug: images with JPG not displaying, replaced with jpg

--- a/illustration.html
+++ b/illustration.html
@@ -19,26 +19,26 @@
         <p>Misc pieces from previous years: a bit of everything</p>
         <div class="row">
             <div class="column">
-                <img src="files/Illustration/d.jpeg">
-                <img src="files/Illustration/m.jpg">
-                <img src="files/Illustration/f.jpg">
-                <img src="files/Illustration/storyboard.png">
+                <img src="./files/Illustration/d.jpeg">
+                <img src="./files/Illustration/m.jpg">
+                <img src="./files/Illustration/f.jpg">
+                <img src="./files/Illustration/storyboard.png">
             </div>
             
             <div class="column">
-              <img src="files/Illustration/n.JPG">
-              <img src="files/Illustration/a.jpg">
-              <img src="files/Illustration/o.JPG">
-              <img src="files/Illustration/l.JPG">
-              <img src="files/Illustration/q.PNG">
+              <img src="./files/Illustration/n.jpg">
+              <img src="./files/Illustration/a.jpg">
+              <img src="./files/Illustration/o.jpg">
+              <img src="./files/Illustration/l.jpg">
+              <img src="./files/Illustration/q.PNG">
             </div>
 
             <div class="column">
-                <img src="files/Illustration/b.png">
-                <img src="files/Illustration/h.JPG">
-                <img src="files/Illustration/i.jpg">
-                <img src="files/Illustration/j.jpg">
-                <img src="files/Illustration/k.JPG">
+                <img src="./files/Illustration/b.png">
+                <img src="./files/Illustration/h.jpg">
+                <img src="./files/Illustration/i.jpg">
+                <img src="./files/Illustration/j.jpg">
+                <img src="./files/Illustration/k.jpg">
                 
               </div>
           </div>
