--- a/photo-subpages/badminton.html
+++ b/photo-subpages/badminton.html
@@ -22,8 +22,8 @@
                 <img src="../files/Badminton/d.jpg">
                 <img src="../files/Badminton/u.jpg">
                 <img src="../files/Badminton/m.jpg">
-                <img src="../files/Badminton/n.JPG">
-                <img src="../files/Badminton/o.JPG">
+                <img src="../files/Badminton/n.jpg">
+                <img src="../files/Badminton/o.jpg">
                 <img src="../files/Badminton/p.jpg">
                 <img src="../files/Badminton/q.jpg">
                 <img src="../files/Badminton/f.jpg">
@@ -32,11 +32,11 @@
             </div>
             <div class="column">
                 <img src="../files/Badminton/g.jpg">
-                <img src="../files/Badminton/h.JPG">
+                <img src="../files/Badminton/h.jpg">
                 <img src="../files/Badminton/i.jpg">
                 <img src="../files/Badminton/j.jpg">
                 <img src="../files/Badminton/cover.jpg">
-                <img src="../files/Badminton/k.JPG">
+                <img src="../files/Badminton/k.jpg">
                 <img src="../files/Badminton/e.jpg">
                 <img src="../files/Badminton/v.jpg">
               </div>
@@ -48,7 +48,7 @@
               <img src="../files/Badminton/r.jpg">
               <img src="../files/Badminton/s.jpg">
               <img src="../files/Badminton/t.jpg">
-              <img src="../files/Badminton/l.JPG">
+              <img src="../files/Badminton/l.jpg">
               
             </div>
           </div>
