--- a/photo-subpages/film.html
+++ b/photo-subpages/film.html
@@ -25,24 +25,24 @@
               <img src="../files/Film/r.jpeg">
               <img src="../files/Film/s.jpeg">
               <img src="../files/Film/t.jpeg">
-              <img src="../files/Film/l.JPG">
+              <img src="../files/Film/l.jpg">
               <img src="../files/Film/u.jpeg">
             </div>
             <div class="column">
               <img src="../files/Film/g.jpg">
-              <img src="../files/Film/h.JPG">
+              <img src="../files/Film/h.jpg">
               <img src="../files/Film/i.jpg">
               <img src="../files/Film/j.jpg">
               <img src="../files/Film/jane, aaron.jpg">
-              <img src="../files/Film/k.JPG">
+              <img src="../files/Film/k.jpg">
               <img src="../files/Film/e.jpg">
               <img src="../files/Film/v.jpeg">
             </div>
             <div class="column">
                 <img src="../files/Film/d.jpg">
                 <img src="../files/Film/m.jpg">
-                <img src="../files/Film/n.JPG">
-                <img src="../files/Film/o.JPG">
+                <img src="../files/Film/n.jpg">
+                <img src="../files/Film/o.jpg">
                 <img src="../files/Film/p.jpeg">
                 <img src="../files/Film/q.jpeg">
                 <img src="../files/Film/f.jpg">
