--- a/photo-subpages/kirkland.html
+++ b/photo-subpages/kirkland.html
@@ -19,19 +19,19 @@
 
         <div class="row">
             <div class="column">
-              <img src="../files/Kirkland/_DSC2867.jpg">
-              <img src="../files/Kirkland/_DSC2872.jpg">
-              <img src="../files/Kirkland/_DSC2879.jpg">
+              <img src="../files/Kirkland/DSC2867.jpg">
+              <img src="../files/Kirkland/DSC2872.jpg">
+              <img src="../files/Kirkland/DSC2879.jpg">
             </div>
             <div class="column">
-              <img src="../files/Kirkland/_DSC2896.jpg">
-              <img src="../files/Kirkland/_DSC2899.jpg">
-              <img src="../files/Kirkland/_DSC2922.jpg">
+              <img src="../files/Kirkland/DSC2896.jpg">
+              <img src="../files/KirklandDSC2899.jpg">
+              <img src="../files/Kirkland/DSC2922.jpg">
             </div>
             <div class="column">
               <img src="../files/Kirkland/group-cover.jpg">
-              <img src="../files/Kirkland/_DSC2931.jpg">
-              <img src="../files/Kirkland/_DSC2934.jpg">
+              <img src="../files/Kirkland/DSC2931.jpg">
+              <img src="../files/Kirkland/DSC2934.jpg">
             </div>
           </div>
     </div>
