--- a/photo-subpages/scs ball.html
+++ b/photo-subpages/scs ball.html
@@ -21,8 +21,8 @@
             <div class="column">
                 <img src="../files/SCS Ball/d.jpg">
                 <img src="../files/SCS Ball/m.jpg">
-                <img src="../files/SCS Ball/n.JPG">
-                <img src="../files/SCS Ball/o.JPG">
+                <img src="../files/SCS Ball/n.jpg">
+                <img src="../files/SCS Ball/o.jpg">
                 <img src="../files/SCS Ball/p.jpg">
                 <img src="../files/SCS Ball/q.jpg">
                 <img src="../files/SCS Ball/f.jpg">
@@ -36,17 +36,17 @@
               <img src="../files/SCS Ball/r.jpg">
               <img src="../files/SCS Ball/s.jpg">
               <img src="../files/SCS Ball/t.jpg">
-              <img src="../files/SCS Ball/l.JPG">
+              <img src="../files/SCS Ball/l.jpg">
               <img src="../files/SCS Ball/u.jpg">
             </div>
 
             <div class="column">
                 <img src="../files/SCS Ball/g.jpg">
-                <img src="../files/SCS Ball/h.JPG">
+                <img src="../files/SCS Ball/h.jpg">
                 <img src="../files/SCS Ball/i.jpg">
                 <img src="../files/SCS Ball/j.jpg">
                 <img src="../files/SCS Ball/stage.jpg">
-                <img src="../files/SCS Ball/k.JPG">
+                <img src="../files/SCS Ball/k.jpg">
                 <img src="../files/SCS Ball/e.jpg">
                 <img src="../files/SCS Ball/v.jpg">
               </div>
