--- a/photo-subpages/soulstylz 1.html
+++ b/photo-subpages/soulstylz 1.html
@@ -21,8 +21,8 @@
             <div class="column">
                 <img src="../files/Soulstylz 1/u.jpg">
                 <img src="../files/Soulstylz 1/m.jpg">
-                <img src="../files/Soulstylz 1/n.JPG">
-                <img src="../files/Soulstylz 1/o.JPG">
+                <img src="../files/Soulstylz 1/n.jpg">
+                <img src="../files/Soulstylz 1/o.jpg">
                 <img src="../files/Soulstylz 1/q.jpg">
                 <img src="../files/Soulstylz 1/f.jpg">
                 <img src="../files/Soulstylz 1/r.jpg">
@@ -34,7 +34,7 @@
               <img src="../files/Soulstylz 1/a.jpg">
               <img src="../files/Soulstylz 1/b.jpg">
               <img src="../files/Soulstylz 1/c.jpg">
-              <img src="../files/Soulstylz 1/l.JPG">
+              <img src="../files/Soulstylz 1/l.jpg">
               <img src="../files/Soulstylz 1/e.jpg">
               <img src="../files/Soulstylz 1/s.jpg">
               <img src="../files/Soulstylz 1/v.jpg">
@@ -42,10 +42,10 @@
 
             <div class="column">
                 <img src="../files/Soulstylz 1/g.jpg">
-                <img src="../files/Soulstylz 1/h.JPG">
+                <img src="../files/Soulstylz 1/h.jpg">
                 <img src="../files/Soulstylz 1/i.jpg">
                 <img src="../files/Soulstylz 1/j.jpg">
-                <img src="../files/Soulstylz 1/k.JPG">
+                <img src="../files/Soulstylz 1/k.jpg">
                 <img src="../files/Soulstylz 1/p.jpg">
                 <img src="../files/Soulstylz 1/t.jpg">
               </div>
