--- a/photo-subpages/soulstylz 2.html
+++ b/photo-subpages/soulstylz 2.html
@@ -21,8 +21,8 @@
             <div class="column">
                 <img src="../files/Soulstylz 2/d.jpg">
                 <img src="../files/Soulstylz 2/m.jpg">
-                <img src="../files/Soulstylz 2/n.JPG">
-                <img src="../files/Soulstylz 2/o.JPG">
+                <img src="../files/Soulstylz 2/n.jpg">
+                <img src="../files/Soulstylz 2/o.jpg">
                 <img src="../files/Soulstylz 2/p.jpg">
                 <img src="../files/Soulstylz 2/q.jpg">
                 <img src="../files/Soulstylz 2/f.jpg">
@@ -30,11 +30,11 @@
             </div>
             <div class="column">
                 <img src="../files/Soulstylz 2/g.jpg">
-                <img src="../files/Soulstylz 2/h.JPG">
+                <img src="../files/Soulstylz 2/h.jpg">
                 <img src="../files/Soulstylz 2/i.jpg">
                 <img src="../files/Soulstylz 2/j.jpg">
                 <img src="../files/Soulstylz 2/soulcrew.jpg">
-                <img src="../files/Soulstylz 2/k.JPG">
+                <img src="../files/Soulstylz 2/k.jpg">
                 <img src="../files/Soulstylz 2/e.jpg">
                 <img src="../files/Soulstylz 2/v.jpg">
               </div>
@@ -46,7 +46,7 @@
               <img src="../files/Soulstylz 2/r.jpg">
               <img src="../files/Soulstylz 2/s.jpg">
               <img src="../files/Soulstylz 2/t.jpg">
-              <img src="../files/Soulstylz 2/l.JPG">
+              <img src="../files/Soulstylz 2/l.jpg">
               <img src="../files/Soulstylz 2/u.jpg">
             </div>
           </div>
