--- a/photo-subpages/tricking.html
+++ b/photo-subpages/tricking.html
@@ -21,8 +21,8 @@
             <div class="column">
                 <img src="../files/CMU Tricking/d.jpg">
                 <img src="../files/CMU Tricking/m.jpg">
-                <img src="../files/CMU Tricking/n.JPG">
-                <img src="../files/CMU Tricking/o.JPG">
+                <img src="../files/CMU Tricking/n.jpg">
+                <img src="../files/CMU Tricking/o.jpg">
                 <img src="../files/CMU Tricking/p.jpg">
                 <img src="../files/CMU Tricking/f.jpg">
             </div>
@@ -32,16 +32,16 @@
               <img src="../files/CMU Tricking/a.jpg">
               <img src="../files/CMU Tricking/b.jpg">
               <img src="../files/CMU Tricking/c.jpg">
-              <img src="../files/CMU Tricking/l.JPG">
+              <img src="../files/CMU Tricking/l.jpg">
               <img src="../files/CMU Tricking/e.jpg">
             </div>
 
             <div class="column">
                 <img src="../files/CMU Tricking/g.jpg">
-                <img src="../files/CMU Tricking/h.JPG">
+                <img src="../files/CMU Tricking/h.jpg">
                 <img src="../files/CMU Tricking/i.jpg">
                 <img src="../files/CMU Tricking/j.jpg">
-                <img src="../files/CMU Tricking/k.JPG">
+                <img src="../files/CMU Tricking/k.jpg">
               </div>
           </div>
     </div>
