--- a/photo-subpages/personal.html
+++ b/photo-subpages/personal.html
@@ -29,10 +29,10 @@
             </div>
             <div class="column">
                 <img src="../files/Personal/g.jpeg">
-                <img src="../files/Personal/h.JPG">
+                <img src="../files/Personal/h.jpg">
                 <img src="../files/Personal/i.jpg">
                 <img src="../files/Personal/j.jpg">
-                <img src="../files/Personal/k.JPG">
+                <img src="../files/Personal/k.jpg">
               </div>
             
             <div class="column">
@@ -40,9 +40,9 @@
               <img src="../files/Personal/lilly.jpeg">
               <img src="../files/Personal/b.jpg">
               <img src="../files/Personal/c.jpg">
-              <img src="../files/Personal/l.JPG">
-              <img src="../files/Personal/n.JPG">
-              <img src="../files/Personal/o.JPG">
+              <img src="../files/Personal/l.jpg">
+              <img src="../files/Personal/n.jpg">
+              <img src="../files/Personal/o.jpg">
             </div>
           </div>
     </div>
