Fixed bug: sidebar nav links broken within photo subpages

--- a/photo-subpages/film.html
+++ b/photo-subpages/film.html
@@ -7,13 +7,13 @@
 </head>
 
 <body>
-    <div class="sidenav">
-        <a href="../index.html" id="name"><strong>Deya Liao</strong></a>
-        <a href="../photo.html">Photo</a>
-        <a href="#">Video</a>
-        <a href="#">Illustration</a>
-        
-    </div>
+  <div class="sidenav">
+    <a href="../index.html" id="name"><strong>Deya Liao</strong></a>
+    <a href="../photo.html">Photo</a>
+    <a href="../video.html">Video</a>
+    <a href="../illustration.html">Illustration</a>
+    
+</div>
 
     <div class="main">
         <p>Film</p>
