--- a/photo-subpages/soulstylz 1.html
+++ b/photo-subpages/soulstylz 1.html
@@ -10,8 +10,8 @@
     <div class="sidenav">
         <a href="../index.html" id="name"><strong>Deya Liao</strong></a>
         <a href="../photo.html">Photo</a>
-        <a href="#">Video</a>
-        <a href="#">Illustration</a>
+        <a href="../video.html">Video</a>
+        <a href="../illustration.html">Illustration</a>
         
     </div>
 
