--- a/photo-subpages/tartan.html
+++ b/photo-subpages/tartan.html
@@ -10,11 +10,10 @@
     <div class="sidenav">
         <a href="../index.html" id="name"><strong>Deya Liao</strong></a>
         <a href="../photo.html">Photo</a>
-        <a href="#">Video</a>
-        <a href="#">Illustration</a>
+        <a href="../video.html">Video</a>
+        <a href="../illustration.html">Illustration</a>
         
     </div>
-
     <div class="main">
         <p>The Tartan – CMU's School Newspaper</p>
         <div class="row">
