--- a/illustration.html
+++ b/illustration.html
@@ -27,10 +27,10 @@
             
             <div class="column">
               <img src="./files/Illustration/n.jpg">
+              <img src="./files/Illustration/s.jpeg">
               <img src="./files/Illustration/a.jpg">
               <img src="./files/Illustration/o.jpg">
               <img src="./files/Illustration/l.jpg">
-              <img src="./files/Illustration/q.PNG">
             </div>
 
             <div class="column">
