Added tab titles

--- a/photo-subpages/film.html
+++ b/photo-subpages/film.html
@@ -4,7 +4,8 @@
 
 <head>
     <link rel="stylesheet" href="../style.css">
-</head>
+    <title>Photo</title>
+  </head>
 
 <body>
   <div class="sidenav">
