--- a/photo-subpages/kirkland.html
+++ b/photo-subpages/kirkland.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <link rel="stylesheet" href="../style.css">
-</head>
+    <title>Photo</title>
+  </head>
 
 <body>
   <div class="sidenav">
