--- a/video.html
+++ b/video.html
@@ -40,6 +40,18 @@
                 Short animation created for morphing truss visualization, animated in Procreate. Designed for Morphing Matter Lab. 
             </div>
         </div>
+
+        <br>
+        <p><b>Short Film</b></p> 
+        <div class="grid-container">
+            <div class="grid-item">
+                <iframe width="640" height="360" src="https://www.youtube.com/embed/2M_S9zgS3sE" frameborder="0">
+                </iframe>
+            </div>
+            <div class="grid-item">
+                Short film created for Film Production course; experimented with different compositions and technique. 
+            </div>
+        </div>
        
     </div>
     
