--- a/illustration.html
+++ b/illustration.html
@@ -20,7 +20,7 @@
         <p>Misc pieces from previous years: a bit of everything</p>
         <div class="row">
             <div class="column">
-                <img src="./files/Illustration/t.jpg">
+                <img src="./files/Illustration/t.jpeg">
                 <img src="./files/Illustration/d.jpeg">
                 <img src="./files/Illustration/m.jpg">
                 <img src="./files/Illustration/f.jpg">
