published en pointe

--- a/illustration.html
+++ b/illustration.html
@@ -20,22 +20,23 @@
         <p>Misc pieces from previous years: a bit of everything</p>
         <div class="row">
             <div class="column">
+                <img src="./files/Illustration/u.jpeg">
                 <img src="./files/Illustration/t.jpeg">
                 <img src="./files/Illustration/d.jpeg">
                 <img src="./files/Illustration/m.jpg">
-                <img src="./files/Illustration/f.jpg">
-                <img src="./files/Illustration/storyboard.png">
+                
             </div>
             
             <div class="column">
-              <img src="./files/Illustration/n.jpg">
               <img src="./files/Illustration/s.jpeg">
+              <img src="./files/Illustration/n.jpg">
               <img src="./files/Illustration/a.jpg">
               <img src="./files/Illustration/o.jpg">
               <img src="./files/Illustration/l.jpg">
             </div>
 
             <div class="column">
+                <img src="./files/Illustration/v.jpeg">
                 <img src="./files/Illustration/b.png">
                 <img src="./files/Illustration/h.jpg">
                 <img src="./files/Illustration/i.jpg">
