--- a/photo.html
+++ b/photo.html
@@ -18,10 +18,11 @@
         <p>Click into each image for the full collection.</p> <br>
 
         <div class="grid-container">
+
             <div class="grid-item">
-                <a href="./photo-subpages/film.html">
-                <img src="./files/Film/jane, aaron.jpg" alt="">
-                Film
+                <a href="./photo-subpages/enpointe.html">
+                    <img src="./files/EnPointe/group.jpg" alt="EnPointe Group">
+                    En Pointe
                 </a>
             </div>
                 
@@ -79,6 +80,13 @@
                 <a href="./photo-subpages/personal.html">
                     <img src="./files/Personal/lilly.jpeg" alt="">
                     Personal
+                </a>
+            </div>
+
+            <div class="grid-item">
+                <a href="./photo-subpages/film.html">
+                <img src="./files/Film/jane, aaron.jpg" alt="">
+                Film
                 </a>
             </div>
           </div>
