--- a/photo-subpages/kirkland.html
+++ b/photo-subpages/kirkland.html
@@ -20,13 +20,14 @@
 
         <div class="row">
             <div class="column">
+              <img src="../files/Kirkland/b.jpg">
               <img src="../files/Kirkland/DSC2867.jpg">
               <img src="../files/Kirkland/DSC2872.jpg">
               <img src="../files/Kirkland/DSC2879.jpg">
             </div>
             <div class="column">
               <img src="../files/Kirkland/DSC2896.jpg">
-              <img src="../files/KirklandDSC2899.jpg">
+              <img src="../files/Kirkland/a.jpg">
               <img src="../files/Kirkland/DSC2922.jpg">
             </div>
             <div class="column">
