changed tartan photo

--- a/photo.html
+++ b/photo.html
@@ -71,7 +71,7 @@
 
             <div class="grid-item">
                 <a href="./photo-subpages/tartan.html">
-                    <img src="./files/The Tartan/abortion.jpg" alt="">
+                    <img src="./files/The Tartan/h.jpg" alt="">
                     The Tartan
                 </a>
                 </div>
