Added grad photos

--- a/photo.html
+++ b/photo.html
@@ -20,6 +20,13 @@
         <div class="grid-container">
 
             <div class="grid-item">
+                <a href="./photo-subpages/grad.html">
+                    <img src="./files/Grad/cover-2.jpg" alt="Graduation Photos">
+                    Graduation
+                </a>
+            </div>
+
+            <div class="grid-item">
                 <a href="./photo-subpages/enpointe.html">
                     <img src="./files/EnPointe/group.jpg" alt="EnPointe Group">
                     En Pointe
