Updated intro paragraph

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!-- Page content -->
 <div class="main" id="Home">
     
-    <p id="DeyaIntro">Hi! I’m a senior at Carnegie Mellon University studying <span class="majors">Computer Science</span>, with an additional major in <span class="majors">Film & Visual Media</span> and a minor in <span class="majors">Social & Political History</span>. I’m interested in digital media as a medium of expression and communication. </p>
+    <p id="DeyaIntro">Hi! I’m a <a href="https://www.cmu.edu/student-affairs/dean/fifth/index.html">Fifth Year Scholar</a> at Carnegie Mellon University studying <span class="majors">Computer Science</span>, with an additional major in <span class="majors">Film & Visual Media</span> and a minor in <span class="majors">Social & Political History</span>. I’m interested in digital media as a medium of expression & communication and exploring technology's role in our society. </p>
     <p>Reach out! View my <a target="_blank" href="./files/Deya_Liao_2025.pdf">Resume</a> and <a href="https://www.linkedin.com/in/deyaliao/" target="_blank">LinkedIn</a>.</p>
     <br>
     <img id="DeyaImg" src="files/IMG_6506.jpg" alt="Deya">    
