--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <!-- Page content -->
 <div class="main" id="Home">
     
-    <p id="DeyaIntro">Hi! I’m a <a href="https://www.cmu.edu/student-affairs/dean/fifth/index.html">Fifth Year Scholar</a> at Carnegie Mellon University studying <span class="majors">Computer Science</span>, with an additional major in <span class="majors">Film & Visual Media</span> and a minor in <span class="majors">Social & Political History</span>. I’m interested in digital media as a medium of expression & communication and exploring technology's role in our society. </p>
-    <p>Reach out! View my <a target="_blank" href="./files/Deya_Liao_2025.pdf">Resume</a> and <a href="https://www.linkedin.com/in/deyaliao/" target="_blank">LinkedIn</a>.</p>
+    <p id="DeyaIntro">Hi! I’m a <u><a href="https://www.cmu.edu/student-affairs/dean/fifth/index.html" target="_blank">Fifth Year Scholar</a></u> at Carnegie Mellon University studying <span class="majors">Computer Science</span>, with an additional major in <span class="majors">Film & Visual Media</span> and a minor in <span class="majors">Social & Political History</span>. I’m interested in digital media as a medium of expression and communication, and I hope to further explore technology's role in our society. </p>
+    <p>Reach out! View my <u><a target="_blank" href="./files/Deya_Liao_2025.pdf">Resume</a></u> and <u><a href="https://www.linkedin.com/in/deyaliao/" target="_blank">LinkedIn</a></u>.</p>
     <br>
     <img id="DeyaImg" src="files/IMG_6506.jpg" alt="Deya">    
     <p>Coded from scratch. &copy; 2025</p>
