--- a/photo-subpages/scs ball.html
+++ b/photo-subpages/scs ball.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="main">
-        <p>Soulstylz Spring 2024</p>
+        <p>CMU School of Computer Science Ball 2023</p>
         <div class="row">
             <div class="column">
                 <img src="../files/SCS Ball/d.jpg">
