--- a/photo.html
+++ b/photo.html
@@ -21,8 +21,15 @@
 
             <div class="grid-item">
                 <a href="./photo-subpages/grad.html">
-                    <img src="./files/Grad/cover-2.jpg" alt="Graduation Photos">
-                    Graduation
+                    <img src="./files/Grad/cover-4.jpg" alt="Graduation Photos">
+                    Graduation Sessions
+                </a>
+            </div>
+
+            <div class="grid-item">
+                <a href="./photo-subpages/theta.html">
+                    <img src="./files/Theta/cover.jpg" alt="Kappa Alpha Theta ">
+                    Kappa Alpha Theta Formal
                 </a>
             </div>
 
