--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
 <!-- Page content -->
 <div class="main" id="Home">
     
-    <p id="DeyaIntro">Hi! I’m a <u><a href="https://www.cmu.edu/student-affairs/dean/fifth/index.html" target="_blank">Fifth Year Scholar</a></u> at Carnegie Mellon University studying <span class="majors">Computer Science</span> and <span class="majors">Film & Visual Media</span>, with a minor in <span class="majors">Social & Political History</span>. 
-    <br><br>
-    I’m interested in 1) studying technology’s impact on our modern-day culture and social stratosphere from a critical lens, 2) exploring digital media as an art form / medium of cultivating culture and discourse in true humanities fashion, and 3) understanding how to bring people together to build lasting community in this new era of technological dependence. </p>
-        
-    Feel free to reach out!
-    <br><br>
+    <p id="DeyaIntro">Hi! I’m a <u><a href="https://www.cmu.edu/student-affairs/dean/fifth/index.html" target="_blank">Fifth Year Scholar</a></u> at Carnegie Mellon University studying <span class="majors">Computer Science</span> and <span class="majors">Film & Visual Media</span>, with a minor in <span class="majors">Social & Political History</span>. I’m interested in 
+    <br>
+    <ol>
+        <li>technology’s impact on our modern-day culture and social stratosphere from a critical lens</li>
+        <li>digital media as an art form / medium of cultivating culture, discourse, and in-person interaction</li>
+        <li>bringing people together to build lasting community in a new era of technological dependence</li>
+    </ol></p>
+    <br>
     <img id="DeyaImg" src="files/IMG_6506.jpg" alt="Deya">    
     <p>Coded from scratch. &copy; 2025</p>
 </div>
