--- a/video-subpages/meetcutcmu.html
+++ b/video-subpages/meetcutcmu.html
@@ -8,7 +8,7 @@
 
 <!-- Side navigation -->
 <div class="sidenav">
-    <a href="#" id="name"><strong>Deya Liao</strong></a>
+    <a href="../index.html" id="name"><strong>Deya Liao</strong></a>
     <a href="#"><span class="majors">Photo</span></a>
     <div class="sidenav-tab">
         <a href="../photo-subpages2/xyh.html">夕阳红</a>
