alter intro paragraph

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="main" id="Home">
     <div class="about">
     <div class="about-text">
-        <p id="DeyaIntro">Hi! I’m a <u><a href="https://www.cmu.edu/student-affairs/dean/fifth/index.html" target="_blank">Fifth Year Scholar</a></u> at Carnegie Mellon University studying <span class="majors">Computer Science</span> and <span class="majors">Film & Visual Media</span>, with a minor in <span class="majors">Social & Political History</span>. I’m interested in 
+        <p id="DeyaIntro">Hi! I’m a <u><a href="https://www.cmu.edu/student-affairs/dean/fifth/index.html" target="_blank">Fifth Year Scholar</a></u> at Carnegie Mellon University studying <span class="majors">Computer Science</span> and <span class="majors">Film & Visual Media</span>, with a minor in <span class="majors">Social & Political History</span>. Aspiring multimedia journalist interested in 
         </p>
 
         <ol>
@@ -39,7 +39,6 @@
         <li>digital media as an art form / medium of cultivating culture, discourse, and in-person interaction</li>
         <li>bringing people together to build lasting community in a new era of technological dependence</li>
         </ol>  
-        <p>Aspiring multimedia journalist!!</p>
     </div>
     <div class="about-photo">
         <img id="DeyaImg" src="files/deya-pfp.jpg" alt="Deya">  
