--- a/photo-subpages2/xyh.html
+++ b/photo-subpages2/xyh.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="main">
-        <p class="photo-blurb">夕阳红, or "xi yang hong", translates literally to sunset red––a euphemism for the passing of time and the elderly. It's also the WeChat group name for the local Chinese elderly community my grandparents joined 13 years ago. Coming to the US with their immigrant children (my mom), my grandparents are one of the many who've given up their heritage and homeland. Instead, they spend all of their time with the little family they have here, foraging memories from the greater network of the Chinese diaspora. </p>
+        <p class="photo-blurb">夕阳红, or "xi yang hong", translates literally to sunset red––a euphemism for the passing of time and the elderly. It's also the WeChat group name for the local Chinese elderly community my grandparents joined 13 years ago. Coming to the US with their immigrant children (my mom), my grandparents are one of many who've given up their heritage, homeland, and daily way of life. They're one of the most important people in my life, and I hope to make their sacrifice worth it. </p>
         <div class="row">
             <div class="column">
                 <img src="../files/Chinese Festival/d.jpg">
