--- a/photo-subpages2/kappa-alpha-theta.html
+++ b/photo-subpages2/kappa-alpha-theta.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="main">
-        <p class="photo-blurb">A sorority that I joined in my junior year and dropped the subsequent year, Kappa Alpha Theta was a prominent memory of my college career. A very public form of community on campus that seemed yet exclusive and mysteriously good or bad depending on whom you talked to, I was fascinated about the role that Greek Life played in many people's lives. While a point of contention within its impacts on my own life, I can confidently attest to its cultivation of true sisterhood for many.</p>
+        <p class="photo-blurb">A sorority I joined in my junior year and dropped the following, Kappa Alpha Theta is a prominent memory of my college career. A very public organization on campus that seemed exclusive and confusingly good/bad depending on whom you talked to, I was fascinated about the role that Greek Life played in many people's lives, especially within the context of community. While a point of contention in my own life, I can confidently attest to its cultivation of true sisterhood for many.</p>
         <div class="row">
             <div class="column">
                 <img src="../files/kat-formal/a.jpg">
