--- a/photo-subpages2/moving.html
+++ b/photo-subpages2/moving.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="main">
-        <p class="photo-blurb">Dance can be defined by many different genres, but they are all united by the act of movement. In a busy college atmosphere, students are still keeping up with childhood passions through campus organizations. An avenue for true community, these clubs are the cornerstones of friendship and connection.</p>
+        <p class="photo-blurb">Dance can be defined by many different genres, but they are all united by the act of movement. In a busy college atmosphere, students still keep up with lifelong passions through these organizations found on campus. An avenue for true community, these clubs are the cornerstones of friendship and connection.</p>
         <div class="row">
             <div class="column">
                 <img src="../files/dance/a.jpg">
