--- a/photo-subpages2/grad.html
+++ b/photo-subpages2/grad.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="main">
-        <p class="photo-blurb">One of my favorite moments to capture, graduation is a celebration of friendship, hard work, and sacrifice. With the rising costs of education, university is one of the largest familial sacrifices for many: it is a confirmation of achieving the American dream. After all, the last time everyone got together on campus was 4 years ago starting college: so much has changed since then.  </p>
+        <p class="photo-blurb">One of my favorite moments to capture, graduation is a celebration of friendship, hard work, and sacrifice. With the rising costs of education, university is one of the largest familial sacrifices for many: its existence is a confirmation of achieving the American dream. So much has changed since the last time all family members congregated on campus 4 years ago––anxious to send their child off to college.  </p>
         <div class="row">
             <div class="column">
                 <img src="../files/Grad/16.jpg">
