added tartan photo

--- a/photo-subpages2/the-tartan.html
+++ b/photo-subpages2/the-tartan.html
@@ -39,6 +39,7 @@
             </div>
             <div class="column">
                 <img src="../files/The Tartan/g.jpg">
+                <img src="../files/The Tartan/Screenshot 2025-11-19 at 4.06.28 PM.png">
                 <img src="../files/The Tartan/h.jpg">
                 <img src="../files/The Tartan/i.jpg">
                 <img src="../files/The Tartan/j.jpg">
