--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" type="image/x-icon" href="/files/star.png">
     <title>Deya Liao</title>
 </head>
 <body>
@@ -13,6 +14,7 @@
     <div class="sidenav-tab">
         <a href="./photo-subpages2/xyh.html">夕阳红</a>
         <a href="./photo-subpages2/kappa-alpha-theta.html">KAPPA ALPHA THETA</a>
+        <a href="./photo-subpages2/scs-ball.html">Ball Hard</a>
         <a href="./photo-subpages2/moving.html">Moving</a>
         <a href="./photo-subpages2/grad.html">Graduation</a>
         <a href="./photo-subpages2/headshots.html">Headshots</a>
