--- a/photo-subpages2/grad.html
+++ b/photo-subpages2/grad.html
@@ -14,6 +14,7 @@
         <div class="sidenav-tab">
             <a href="./xyh.html">夕阳红</a>
             <a href="./kappa-alpha-theta.html">KAPPA ALPHA THETA</a>
+            <a href="./scs-ball.html">Ball Hard</a>
             <a href="./moving.html">Moving</a>
             <a href="#">Graduation</a>
             <a href="./headshots.html">Headshots</a>
@@ -27,7 +28,7 @@
     </div>
 
     <div class="main">
-        <p class="photo-blurb">One of my favorite moments to capture, graduation is a celebration of friendship, hard work, and sacrifice. With the rising costs of education, university is one of the largest familial sacrifices for many: its existence is a confirmation of achieving the American dream. So much has changed since the last time all family members congregated on campus 4 years ago––anxious to send their child off to college.  </p>
+        <p class="photo-blurb">Graduation is one of my favorite moments to photograph: a celebration of friendship, effort, and sacrifice. As education grows more expensive, college becomes one of the largest commitments a family can make—its completion a confirmation of the American dream. Four years later, the same families return to campus transformed, remembering the nerves of move-in day as they watch their student cross the stage.  </p>
         <div class="row">
             <div class="column">
                 <img src="../files/Grad/16.jpg">
