--- a/photo-subpages2/headshots.html
+++ b/photo-subpages2/headshots.html
@@ -14,6 +14,7 @@
         <div class="sidenav-tab">
             <a href="./xyh.html">夕阳红</a>
             <a href="./kappa-alpha-theta.html">KAPPA ALPHA THETA</a>
+            <a href="./scs-ball.html">Ball Hard</a>
             <a href="./moving.html">Moving</a>
             <a href="./grad.html">Graduation</a>
             <a href="#">Headshots</a>
