--- a/photo-subpages2/kappa-alpha-theta.html
+++ b/photo-subpages2/kappa-alpha-theta.html
@@ -14,6 +14,7 @@
         <div class="sidenav-tab">
             <a href="./xyh.html">夕阳红</a>
             <a href="#">KAPPA ALPHA THETA</a>
+            <a href="./scs-ball.html">Ball Hard</a>
             <a href="./moving.html">Moving</a>
             <a href="./grad.html">Graduation</a>
             <a href="./headshots.html">Headshots</a>
@@ -27,7 +28,7 @@
     </div>
 
     <div class="main">
-        <p class="photo-blurb">A sorority I joined in my junior year and dropped the following, Kappa Alpha Theta is a prominent memory of my college career. A very public organization on campus that seemed exclusive and confusingly good/bad depending on whom you talked to, I was fascinated about the role that Greek Life played in many people's lives, especially within the context of community. While a point of contention in my own life, I can confidently attest to its cultivation of true sisterhood for many.</p>
+        <p class="photo-blurb">A sorority I joined in my junior year and dropped the following, Kappa Alpha Theta is a prominent memory of my college career. A very public organization on campus that seemed exclusive and polarizing depending on whom you talked to, I was fascinated about the role that Greek Life played in people's sense of community. While a point of contention in my own life, I can confidently attest to its cultivation of true sisterhood for many.</p>
         <div class="row">
             <div class="column">
                 <img src="../files/kat-formal/a.jpg">
