--- a/photo-subpages2/moving.html
+++ b/photo-subpages2/moving.html
@@ -14,6 +14,7 @@
         <div class="sidenav-tab">
             <a href="./xyh.html">夕阳红</a>
             <a href="./kappa-alpha-theta.html">KAPPA ALPHA THETA</a>
+            <a href="./scs-ball.html">Ball Hard</a>
             <a href="#">Moving</a>
             <a href="./grad.html">Graduation</a>
             <a href="./headshots.html">Headshots</a>
@@ -27,7 +28,7 @@
     </div>
 
     <div class="main">
-        <p class="photo-blurb">Dance can be defined by many different genres, but they are all united by the act of movement. In a busy college atmosphere, students still keep up with lifelong passions through these organizations found on campus. An avenue for true community, these clubs are the cornerstones of friendship and connection.</p>
+        <p class="photo-blurb">Dance takes many forms, but every genre is bound by movement. Even in a hectic college environment, students hold onto lifelong passions through the dance groups on campus. More than extracurriculars, these clubs become spaces for real community—the cornerstones of friendship and connection.</p>
         <div class="row">
             <div class="column">
                 <img src="../files/dance/a.jpg">
