--- a/video-subpages/meetcutcmu.html
+++ b/video-subpages/meetcutcmu.html
@@ -13,6 +13,7 @@
     <div class="sidenav-tab">
         <a href="../photo-subpages2/xyh.html">夕阳红</a>
         <a href="../photo-subpages2/kappa-alpha-theta.html">KAPPA ALPHA THETA</a>
+        <a href="../photo-subpages2/scs-ball.html">Ball Hard</a>
         <a href="../photo-subpages2/moving.html">Moving</a>
         <a href="../photo-subpages2/grad.html">Graduation</a>
         <a href="../photo-subpages2/headshots.html">Headshots</a>
@@ -37,7 +38,7 @@
     <div class="row">
             <div class="column">
                 <div class="video">
-                    <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/reel/DQ_5bC7DrHn/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" target="_blank">A post shared by @meetcutcmu</blockquote>
+                    <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/reel/DQ_5bC7DrHn/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" target="_blank" width="100px">A post shared by @meetcutcmu</blockquote>
                     <script async src="//www.instagram.com/embed.js"></script>
                 </div>
             </div>
