--- a/video-subpages/projects.html
+++ b/video-subpages/projects.html
@@ -13,6 +13,7 @@
     <div class="sidenav-tab">
         <a href="../photo-subpages2/xyh.html">夕阳红</a>
         <a href="../photo-subpages2/kappa-alpha-theta.html">KAPPA ALPHA THETA</a>
+        <a href="../photo-subpages2/scs-ball.html">Ball Hard</a>
         <a href="../photo-subpages2/moving.html">Moving</a>
         <a href="../photo-subpages2/grad.html">Graduation</a>
         <a href="../photo-subpages2/headshots.html">Headshots</a>
