--- a/photo-subpages2/xyh.html
+++ b/photo-subpages2/xyh.html
@@ -4,6 +4,7 @@
 
 <head>
     <link rel="stylesheet" href="../style.css">
+    <link rel="icon" type="image/x-icon" href="../files/star.png">
     <title>XYH</title>
 </head>
 
