--- a/video-subpages/meetcutcmu.html
+++ b/video-subpages/meetcutcmu.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="../style.css">
+    <link rel="icon" type="image/x-icon" href="../files/star.png">
     <title>Video</title>
 </head>
 <body>
